@@ -1,5 +1,13 @@
 2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
 
+	* mi.h: Clean up interface, removing unnecessarily exported
+	functions and data structures.
+	* mi-events.c (mi_event_handlers): Move here...
+	* mi-interps.c: .. from here.
+	Include gdb_string.h.
+	
+2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
+
 	* mi-interp.c (mi_interpreter_resume): Ditto.
 	(mi_cmd_interpreter_exec): Use gdb_interpreter_lookup.
 	(_initialize_mi_interp): Use gdb_interpreter_new,
@@ -9,6 +17,8 @@
 	(mi_cmd_break_watch): Ditto.
 	* mi-events.c (mi_interp_stack_changed_hook): Ditto.
 	(event_notify): Ditto.
+	
+
 	* mi-main.c (captured_mi_execute_command): Use
 	gdb_interpreter_current_is_named_p.
 	(mi_load_progress): Ditto.
